# year-3-project

./: README.md
client/: CMakeLists.txt  Canvas.cpp  Canvas.h  ConnectWindow.cpp  ConnectWindow.h  Network.cpp  Network.h  main.cpp  waitingWindow.cpp  waitingWindow.h
server/: TEST.py  images.py  main.py  modelTrain.py  network.py  nn.py  nnModel.py  quickdraw_enhanced_cnn.h5  quickdraw_neuralnet.h5  quickdraw_neuralnet1.h5  quickdraw_neuralnet56.h5  requirements.txt
server/quickdraw1.model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
server/quickdraw1.model/variables/: variables.index
